chore(yapi): add native image support - remove jdk 21 preview feature